@@ -19,6 +19,7 @@ Version 1.0 - 2012-06-XX
  * Display the port Picard is listening on at bottom right status bar (PICARD-191)
  * Make album drops from right hand pane to left default to "unmatched files" again (PICARD-33)
  * Remove .DS_Store, desktop.ini, and Thumbs.db from otherwise empty directories (PICARD-75)
+ * Update artist translation to use new alias features (primary flag, sort names) (PICARD-200)
 
 Version 0.16 - 2011-10-23
  * Added AcoustID support.
